alignments fixed . heading sizes some left

--- a/hackclub/src/App.css
+++ b/hackclub/src/App.css
@@ -558,7 +558,7 @@ body, html {
         height: 400px !important;
     }
     .eventscontent-column h2 {
-        font-size: 5vw !important;
+        font-size: 1.25em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -764,7 +764,7 @@ body, html {
     }
     .eventscontent-column h2 {
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
-        font-size: 4vw !important;
+        font-size: 1.75em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -981,7 +981,7 @@ body, html {
     .eventscontent-column h2 {
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 3.8vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -1232,7 +1232,7 @@ body, html {
         height: 400px !important;
     }
     .eventscontent-column h2 {
-        padding-top: 6em !important;
+        padding-top: 2em !important;
         display: flex !important;
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
@@ -1391,7 +1391,7 @@ body, html {
         margin-bottom: 0 !important;
     }
     .eventscontent-column h2 {
-        font-size: 3vw !important;
+        font-size: 2em !important;
     }
     .eventscontent-column .eventscontent-paragraph {
         font-size: 24px !important;
@@ -1496,7 +1496,7 @@ body, html {
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 2.5vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -1726,7 +1726,7 @@ body, html {
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 2.5vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -1935,7 +1935,7 @@ body, html {
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 2.5vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -2051,7 +2051,7 @@ body, html {
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 2.5vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -2235,7 +2235,7 @@ body, html {
         align-items: center;
         font-family: "Phantom Sans", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif !important;
         font-weight: 500 !important;
-        font-size: 2.5vw !important;
+        font-size: 2em !important;
         justify-content: center;
         width: 100%;
         padding-bottom: 5px !important;
@@ -2416,6 +2416,20 @@ body, html {
     margin-top: 75px;
 }
 
+#teams-section .specialdiv{
+    width: 24rem;
+    height: 5px;
+    background: black;
+    margin: 1rem auto;
+}
+
+.ourteamheading .specialdiv {
+    width: 24rem;
+    height: 5px;
+    background: black;
+    margin: 1rem auto;
+}
+
 #contact-us .specialdiv {
     width: 24rem;
     height: 5px;
@@ -2548,7 +2562,17 @@ body, html {
         margin-left: 0;
         margin-right:0 ;
     }
+    
+    #teams-section .specialdiv{
+        width:60%;
+    }
+
+    #aboutus .specialdiv {
+        width:51%;
+    }
+
     #contact-us .specialdiv{
+        width:55%;
         margin : 5% auto;
     }
     
@@ -2955,7 +2979,7 @@ body, html {
 /*about us*/
 
 .aboutusheading {
-    font-size: 40px !important;
+    font-size: 2em  !important;
     text-align: center;
     display: flex;
     width: 100%;
@@ -2964,7 +2988,7 @@ body, html {
     font-weight: 700 !important;
 }
 .contactusheading{
-    font-size: 40px !important;
+    font-size: 2em !important;
     text-align: center;
     display: flex;
     width: 100%;
@@ -2985,7 +3009,7 @@ body, html {
 
 @media screen and (min-width: 769px) and (max-width: 1024px) {
     .aboutusheading {
-        font-size: 40px;
+        font-size: 2em;
         font-weight: 700 !important;
     }
    
@@ -2993,15 +3017,24 @@ body, html {
 
 @media screen and (min-width: 1025px) and (max-width: 1201px) {
     .aboutusheading {
-        font-size: 40px;
+        font-size: 2em;
         font-weight: 700 !important;
     }
    
 }
 
 @media screen and (min-width: 320px) and (max-width: 480px) {
+    .contactusheading{
+        font-size: 1.75em !important;
+        text-align: center;
+        display: flex;
+        width: 100%;
+        justify-content: center;
+        font-weight: 700 !important;
+
+    }
     .aboutusheading {
-        font-size: 40px !important;
+        font-size: 1.75em !important;
         text-align: center;
         display: flex;
         width: 100%;
@@ -3013,7 +3046,7 @@ body, html {
 
 @media screen and (min-width: 481px) and (max-width: 650px) {
     .aboutusheading {
-        font-size: 40px !important;
+        font-size: 1.75em !important;
         text-align: center;
         display: flex;
         width: 100%;
